--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 *.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+/build
+/bin
+/target
+/*.classpath
+*.settings/*
+/target/
+classpath
+.project
+.settings/
+target/
